Activity: fixed input widget jumpiness

--- a/client/Social/Activity/styl/activity.styl
+++ b/client/Social/Activity/styl/activity.styl
@@ -645,6 +645,7 @@ div.kdtooltip.activity-helper
     abs()
 
   .input-view.hitenterview
+    margin          0
     rounded         3px 3px 0 0
     size            100% auto
     min-height      54px
